# family-search-dedup-final

./: .gitignore  README.md
back-end/: database.py  main.py  model.py  pyproject.toml  schema.py
back-end/helpers/: BinaryComparator.py  ORBFeatures_DeepDive.py  SIFTFeatures.py
back-end/scripts/: SIFTFeatures_DeepDive.py  StoreOrbFeatures.py  TestScript.py
back-end/scripts/SQL/: dino_embedding_match.sql  table_definitions.sql
front-end/: next.config.js  package-lock.json  package.json
front-end/src/app/: page.tsx
front-end/src/components/: duplicate-detection-modal.tsx  review-dialog.tsx  upload-dialog.tsx
front-end/src/components/ui/: stack.tsx
model-endpoint/: README.md  dockerfile  requirements.txt  rp_handler.py
